Convert HTML files to markdown using ReaderLM-v2
- Converted 88 HTML files to proper markdown across 40 sites
- Used vLLM server with ReaderLM-v2 model on RTX 3090
- Key conversions: react (8), nextjs (6), mui-material (10), mui-x (7),
  rsbuild (9), bun (4), klarna (2), paypal-developer (1), openai (1)
- 13 files failed (mostly PayPal anti-bot protected pages)
- Fixed vLLM container to use RTX 3090 (device 3) for CUDA compatibility

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>